[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/Space Meatball.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://Menu/Key Bindings.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
use_mipmaps = true
use_filter = true
extra_spacing_bottom = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Key Bindings" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
color = Color( 0.164706, 0.0431373, 0.286275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -240.0
margin_right = 240.0
margin_bottom = 240.0
color = Color( 0.494118, 0.345098, 0.643137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -236.0
margin_right = 240.0
margin_bottom = 236.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 480.0
margin_bottom = 570.0
rect_min_size = Vector2( 480, 380 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 30.0
text = "Key Bindings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 480.0
margin_bottom = 64.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer_down" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 480.0
margin_bottom = 136.0
custom_constants/separation = 40
alignment = 1

[node name="Label4" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer_down"]
margin_left = 80.0
margin_top = 19.0
margin_right = 210.0
margin_bottom = 49.0
text = "Down"

[node name="button" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer_down"]
margin_left = 250.0
margin_right = 400.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 20 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "S"
clip_text = true

[node name="HBoxContainer_left" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 480.0
margin_bottom = 208.0
custom_constants/separation = 70
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer_left"]
margin_left = 79.0
margin_top = 19.0
margin_right = 180.0
margin_bottom = 49.0
text = "Left"

[node name="button" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer_left"]
margin_left = 250.0
margin_right = 400.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 20 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "A"
clip_text = true

[node name="HBoxContainer_right" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 480.0
margin_bottom = 280.0
custom_constants/separation = 45
alignment = 1

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer_right"]
margin_left = 79.0
margin_top = 19.0
margin_right = 205.0
margin_bottom = 49.0
text = "Right"

[node name="button" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer_right"]
margin_left = 250.0
margin_right = 400.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 20 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "D"
clip_text = true

[node name="HBoxContainer_jump" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 284.0
margin_right = 480.0
margin_bottom = 352.0
custom_constants/separation = 120
alignment = 1

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer_jump"]
margin_left = 78.0
margin_top = 19.0
margin_right = 131.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Up"

[node name="button" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer_jump"]
margin_left = 251.0
margin_right = 401.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 20 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "W"
clip_text = true

[node name="HBoxContainer_action" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 356.0
margin_right = 480.0
margin_bottom = 424.0
custom_constants/separation = 25
alignment = 1

[node name="Label4" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer_action"]
margin_left = 79.0
margin_top = 19.0
margin_right = 226.0
margin_bottom = 49.0
text = "Action"

[node name="button" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer_action"]
margin_left = 251.0
margin_right = 401.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 20 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "F"
clip_text = true

[node name="HBoxContainer_attack" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 428.0
margin_right = 480.0
margin_bottom = 496.0
custom_constants/separation = 15
alignment = 1

[node name="Label4" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer_attack"]
margin_left = 75.0
margin_top = 19.0
margin_right = 239.0
margin_bottom = 49.0
text = "Attack"

[node name="button" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer_attack"]
margin_left = 254.0
margin_right = 404.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 20 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "space"
clip_text = true

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 500.0
margin_right = 480.0
margin_bottom = 570.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="ScrollContainer/VBoxContainer/CenterContainer"]
margin_left = 21.0
margin_right = 459.0
margin_bottom = 70.0
text = "Save and Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.133333, 0.133333, 0.694118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonChange" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.5
margin_top = -15.0
margin_right = 180.5
margin_bottom = 15.0
text = "Press new Key"
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer_down/button" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer_left/button" to="." method="_on_Left1_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer_right/button" to="." method="_on_rightbutton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer_jump/button" to="." method="_on_Up1_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer_action/button" to="." method="_on_actionbutton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer_attack/button" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/CenterContainer/Back" to="." method="_on_Back_pressed"]
